# trading-terminal-clusters

./: .gitignore  Cargo.toml  rustfmt.toml
.claude/: settings.local.json
.claude/commands/: add-clusters.md
.github/workflows/: ci.yml
crates/clickhouse-sink/: Cargo.toml
crates/clickhouse-sink/src/: lib.rs
crates/cluster-api/: Cargo.toml  build.rs
crates/cluster-api/examples/: stream_cli.rs
crates/cluster-api/proto/: cluster.proto
crates/cluster-api/src/: auth.rs  cluster_history.rs  lib.rs  main.rs  rest.rs  stream_server.rs  sysmetrics.rs  timeframes.rs
crates/cluster-engine/: Cargo.toml
crates/cluster-engine/src/: aggregator.rs  bus.rs  lib.rs  task.rs
crates/cluster-ingest/: Cargo.toml  cluster-ingest.example.toml
crates/cluster-ingest/src/: aster_session.rs  binance_session.rs  binance_supervisor.rs  bingx_session.rs  bitget_session.rs  bybit_session.rs  config.rs  hyperliquid_session.rs  kucoin_session.rs  main.rs  materialize.rs  mexc_session.rs  okx_session.rs
crates/exchange-aster/: Cargo.toml
crates/exchange-aster/src/: aster_ws.rs  instruments_info.rs  lib.rs  scale.rs
crates/exchange-binance/: Cargo.toml
crates/exchange-binance/src/: futures_info.rs  futures_trade.rs  futures_ws.rs  lib.rs  scale.rs  spot_info.rs  spot_ws.rs
crates/exchange-bingx/: Cargo.toml
crates/exchange-bingx/src/: bingx_trade.rs  bingx_ws.rs  instruments_info.rs  lib.rs  scale.rs
crates/exchange-bitget/: Cargo.toml
crates/exchange-bitget/src/: bitget_trade.rs  bitget_ws.rs  instruments_info.rs  lib.rs  scale.rs
crates/exchange-bybit/: Cargo.toml
crates/exchange-bybit/src/: bybit_trade.rs  bybit_ws.rs  instruments_info.rs  lib.rs  scale.rs
crates/exchange-core/: Cargo.toml
crates/exchange-core/src/: traits.rs  types.rs
crates/exchange-hyperliquid/: Cargo.toml
crates/exchange-hyperliquid/src/: hyperliquid_trade.rs  hyperliquid_ws.rs  instruments_info.rs  lib.rs  scale.rs
crates/exchange-kucoin/: Cargo.toml
crates/exchange-kucoin/src/: instruments_info.rs  kucoin_trade.rs  kucoin_ws.rs  lib.rs  scale.rs
crates/exchange-mexc/: Cargo.toml
crates/exchange-mexc/src/: instruments_info.rs  lib.rs  mexc_trade.rs  mexc_ws.rs  pb.rs  scale.rs
crates/exchange-okx/: Cargo.toml
crates/exchange-okx/src/: instruments_info.rs  lib.rs  okx_trade.rs  okx_ws.rs  scale.rs
crates/ops/: Cargo.toml
crates/ops/src/: lib.rs
crates/query-api/: Cargo.toml
crates/wal/: Cargo.toml
crates/wal/src/: lib.rs  reader.rs  writer.rs
deploy/: CLOUDFLARE-MIGRATION.md  cloudflare-tls-setup.sh
deploy/dev/: docker-compose.yml
deploy/dev/clickhouse/config.d/: storage.xml
deploy/nginx/: clusters.conf
migrations/: 001_clusters_1m.sql  002_rollup_views.sql  003_timeframes.sql  004_add_ohlc.sql
