[workspace]
resolver = "2"
members = [
    "crates/exchange-core",
    "crates/exchange-binance",
    "crates/cluster-engine",
    "crates/wal",
    "crates/clickhouse-sink",
    "crates/query-api",
    "crates/ops",
    "crates/cluster-ingest",
    "crates/cluster-api",
]

[workspace.package]
edition = "2021"
rust-version = "1.85"
license = "UNLICENSED"
publish = false

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
async-trait = "0.1"
futures = "0.3"
bytes = "1"
dashmap = "6"
crc32fast = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
toml = "0.8"
tokio-tungstenite = { version = "0.24", default-features = false, features = ["rustls-tls-webpki-roots", "connect"] }
futures-util = "0.3"

[workspace.lints.rust]
unused_must_use = "deny"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
dbg_macro = "deny"
unwrap_used = "warn"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
