[package]
name = "cluster-api"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
name = "cluster_api"
path = "src/lib.rs"

[[bin]]
name = "cluster-api"
path = "src/main.rs"

[dependencies]
exchange-core = { path = "../exchange-core" }
cluster-engine = { path = "../cluster-engine" }
query-api = { path = "../query-api" }
ops = { path = "../ops" }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures-util = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
sysinfo = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }

[build-dependencies]
tonic-build = { version = "0.12", default-features = false, features = ["prost", "transport"] }
protoc-bin-vendored = "3"

[lints]
workspace = true
