[package]
name = "cluster-ingest"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "cluster-ingest"
path = "src/main.rs"

[dependencies]
exchange-core = { path = "../exchange-core" }
exchange-binance = { path = "../exchange-binance" }
exchange-bybit = { path = "../exchange-bybit" }
exchange-okx = { path = "../exchange-okx" }
exchange-bitget = { path = "../exchange-bitget" }
exchange-aster = { path = "../exchange-aster" }
cluster-engine = { path = "../cluster-engine" }
cluster-api = { path = "../cluster-api" }
wal = { path = "../wal" }
clickhouse-sink = { path = "../clickhouse-sink" }
ops = { path = "../ops" }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
