[package]
name = "query-api"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
exchange-core = { path = "../exchange-core" }
tokio = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
