[package]
name = "wal"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
crc32fast = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
